--- a/BlenderUmap/BlenderUmap.csproj
+++ b/BlenderUmap/BlenderUmap.csproj
@@ -7,14 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-      <PackageReference Include="Serilog" Version="2.11.0" />
-      <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.80.3" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta2" />
+      <PackageReference Include="Serilog" Version="2.12.0-dev-01543" />
+      <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
+      <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\CUE4Parse\CUE4Parse-Conversion\CUE4Parse-Conversion.csproj" />
-      <ProjectReference Include="..\..\CUE4Parse\CUE4Parse\CUE4Parse.csproj" />
+      <ProjectReference Include="..\..\FModel\CUE4Parse\CUE4Parse-Conversion\CUE4Parse-Conversion.csproj" />
+      <ProjectReference Include="..\..\FModel\CUE4Parse\CUE4Parse\CUE4Parse.csproj" />
+      <ProjectReference Include="..\..\FortniteReplayDecompressor\src\FortniteReplayReader\FortniteReplayReader.csproj" />
+      <ProjectReference Include="..\..\FortniteReplayDecompressor\src\Unreal.Core\Unreal.Core.csproj" />
     </ItemGroup>
 
 </Project>
