--- a/BlenderUmap/config.json
+++ b/BlenderUmap/config.json
@@ -47,5 +47,9 @@
       "FileName": "pakchunk1001-WindowsClient.ucas",
       "Key": "0x..."
     }
-  ]
+  ],
+  "OptionsOverrides": {
+    "key1": true,
+    "key2": false
+  }
 }
