--- a/BlenderUmap/BlenderUmap.csproj
+++ b/BlenderUmap/BlenderUmap.csproj
@@ -15,10 +15,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\FModel\CUE4Parse\CUE4Parse-Conversion\CUE4Parse-Conversion.csproj" />
-      <ProjectReference Include="..\..\FModel\CUE4Parse\CUE4Parse\CUE4Parse.csproj" />
-      <ProjectReference Include="..\..\FortniteReplayDecompressor\src\FortniteReplayReader\FortniteReplayReader.csproj" />
-      <ProjectReference Include="..\..\FortniteReplayDecompressor\src\Unreal.Core\Unreal.Core.csproj" />
+      <ProjectReference Include="..\CUE4Parse\CUE4Parse-Conversion\CUE4Parse-Conversion.csproj" />
+      <ProjectReference Include="..\CUE4Parse\CUE4Parse\CUE4Parse.csproj" />
+      <ProjectReference Include="..\FortniteReplayDecompressor\src\FortniteReplayReader\FortniteReplayReader.csproj" />
+      <ProjectReference Include="..\FortniteReplayDecompressor\src\Unreal.Core\Unreal.Core.csproj" />
     </ItemGroup>
 
 </Project>
