empty texture fix

--- a/.gitignore
+++ b/.gitignore
@@ -372,6 +372,7 @@ FodyWeavers.xsd
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+build/*
 
 # Local History for Visual Studio Code
 .history/
